--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 					<div class="footer__main main-footer">
 						<div class="main-footer__info">
 							<a href="#" class="main-footer__logo">
-								<img src="img/footerLogo.svg" alt="Logo">
+								<img src="img/footer/icons/footerLogo.svg" alt="Logo">
 							</a>
 							<div class="main-footer__text text">
 								<p>High level experience in web design and development knowledge, producing quality work.</p>
