--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221202085907">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221202101627">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,10 +20,10 @@
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="" class="menu__link">Home</a></li>
-							<li class="menu__item"><a href="" class="menu__link">About</a></li>
-							<li class="menu__item"><a href="" class="menu__link">Features</a></li>
-							<li class="menu__item"><a href="" class="menu__link">How it works</a></li>
+							<li class="menu__item"><a href="#" data-goto=".page__main" class="menu__link">Home</a></li>
+							<li class="menu__item"><a href="#" data-goto-top="30" data-goto=".page__why" class="menu__link">About</a></li>
+							<li class="menu__item"><a href="#" data-goto-top="30" data-goto=".page__pathway" class="menu__link">Features</a></li>
+							<li class="menu__item"><a href="#" data-goto-top="30" data-goto=".page__how" class="menu__link">How it works</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -316,7 +316,7 @@
 					<div class="footer__main main-footer">
 						<div class="main-footer__info">
 							<a href="#" class="main-footer__logo">
-								<img src="img/footer/icons/footerLogo.svg" alt="Logo">
+								<img src="img/footerLogo.svg" alt="Logo">
 							</a>
 							<div class="main-footer__text text">
 								<p>High level experience in web design and development knowledge, producing quality work.</p>
@@ -384,7 +384,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20221202085907"></script>
+	<script src="js/app.min.js?_v=20221202101627"></script>
 </body>
 
 </html>
